# mailapp-v3

./: .gitignore  BUILD_TAURI.md  app.py  config.py  database.py  fix_emails.py  gmail_sync.py  imap_daemon.py  migrate_emails.py  migrate_to_mailstore.py  models.py  security.py  start_imap.sh
.github/workflows/: build-dmg.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/boot/: api.js  push.js  tauri.js
frontend/src/components/: SearchBar.vue
frontend/src/css/: app.scss  quasar.variables.sass
frontend/src/icons/: material-icons-svg.js
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: AcceptInvitationPage.vue  AdminInvitationsPage.vue  AdminUsersPage.vue  ComposePage.vue  DashboardPage.vue  DocumentsPage.vue  DraftsPage.vue  EmailDetailPage.vue  EmailsPage.vue  LoginPage.vue  ProjectDetailPage.vue  ProjectsPage.vue  RegisterPage.vue  SentPage.vue  TasksPage.vue
mailstore/: __init__.py  query.py
routes/: admin.py  auth.py  documents.py  emails.py  notifications.py  projects.py  search.py  tasks.py
services/: push.py  smtp.py  webhooks.py
static/: font-test.html
static/css/: material-icons.css
templates/: base.html  compose.html  dashboard.html  drafts.html  email_detail.html  emails.html  invitations.html  login.html  project_detail.html  projects.html  register.html  sent.html  tasks.html  users.html  webhooks.html
(+2 files in other folders)
